# solveki

./: .gitignore  DESIGN.md  README.md
.github/workflows/: backend-tests.yml  e2e-tests.yml
backend/: pyproject.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/mathgenerator/: __init__.py  algebra.py  geometry.py
backend/myapp/: admin.py  models.py  srs.py  tests.py  urls.py  views.py
backend/myapp/generators/: __init__.py  algebra1.py  algebra2.py  arithmetic.py  calculus.py  geometry_hs.py  prealgebra.py  precalculus.py  statistics_gen.py
backend/myapp/management/commands/: seed_courses.py  seed_topics.py
backend/myapp/migrations/: 0001_initial.py  0002_remove_course_course_topics_topic_course.py  0004_add_course_is_selected.py  0006_dailydeck_settings.py  0007_usertopicselection_remove_course_is_selected_and_more.py
backend/myapp/tests/: factories.py  test_algebra1_math.py  test_algebra2_math.py  test_arithmetic_math.py  test_auth.py  test_calculus_math.py  test_deck.py  test_generators.py  test_geometry_hs_math.py  test_prealgebra_math.py  test_precalculus_math.py  test_selection.py  test_settings.py  test_srs.py  test_statistics_gen_math.py
backend/myapp/views/: __init__.py  auth.py  courses.py  deck.py  settings.py
bruno/: Get topics of a course.yml  opencollection.yml
bruno/environments/: local.yml
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: auth.spec.js  courses.spec.js  deck.spec.js  fixtures.js  global-setup.js  (+1 more)
solveki/: db.sqlite3
(+33 files in other folders)
