[project]
name = "solveki-backend"
version = "0.1.0"
description = "Solveki backend: Django REST API for math practice."
requires-python = ">=3.12"
dependencies = [
    "django==6.0.4",
    "django-cors-headers",
    "google-auth[requests]",
    "mathgenerator==1.5.0",
    # Verify TLS against the OS trust store so HTTPS-intercepting antivirus /
    # proxies (whose re-signing root is trusted by the OS but not by certifi)
    # don't break outbound calls like Google token verification. See settings.py.
    "truststore",
]

[tool.setuptools]
# This is an application, not an importable library package.
py-modules = []
